SDL working to display a blank screen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.29)
-
 project(Orbits C)
 
-add_executable(Orbits src/orbital_body.c)
+find_package(SDL2 REQUIRED)
+find_package(OpenGL REQUIRED)
+
+include_directories(${SDL2_INCLUDE_DIRS})
+include_directories(${OPENGL_INCLUDE_DIR})
+
+add_executable(Orbits src/main.c src/screen.c src/orbital_body.c)
 
 target_include_directories(Orbits PRIVATE include)
-target_link_libraries(Orbits m)
+target_link_libraries(Orbits m ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES})
